# honkit_html2md

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
doc2md/: __main__.py  book_crawler.py  html_extractor.py  html_to_md.py  main.py  output_writer.py
tests/: test_book_crawler.py  test_html_extractor.py  test_html_to_md.py
tests/fixtures/: sample_index.html  sample_page.html
