[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honkit-html2md"
version = "0.1.0"
description = "Reverse-engineer a HonKit _book directory into Confluence-compatible Markdown"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.scripts]
doc2md = "doc2md.main:main"

[tool.setuptools.packages.find]
include = ["doc2md*"]
